Colab을 통해 생성됨

--- a/python-sdk/tutorials/nuscenes_tutorial.ipynb
+++ b/python-sdk/tutorials/nuscenes_tutorial.ipynb
@@ -58,19 +58,68 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "kZ0vFmJ3OEsD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kZ0vFmJ3OEsD",
+        "outputId": "b8b96a9e-720b-4dca-e5ce-01f7c55177e5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-02-01 11:20:06--  https://www.nuscenes.org/data/v1.0-mini.tgz\n",
+            "Resolving www.nuscenes.org (www.nuscenes.org)... 13.224.14.15, 13.224.14.105, 13.224.14.23, ...\n",
+            "Connecting to www.nuscenes.org (www.nuscenes.org)|13.224.14.15|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 4167696325 (3.9G) [application/x-tar]\n",
+            "Saving to: ‘v1.0-mini.tgz’\n",
+            "\n",
+            "v1.0-mini.tgz       100%[===================>]   3.88G  85.3MB/s    in 46s     \n",
+            "\n",
+            "2025-02-01 11:20:52 (85.7 MB/s) - ‘v1.0-mini.tgz’ saved [4167696325/4167696325]\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# !mkdir -p /data/sets/nuscenes  # Make the directory to store the nuScenes dataset in.\n",
+        "!mkdir -p /data/sets/nuscenes  # Make the directory to store the nuScenes dataset in.\n",
         "\n",
-        "# !wget https://www.nuscenes.org/data/v1.0-mini.tgz  # Download the nuScenes mini split.\n",
+        "!wget https://www.nuscenes.org/data/v1.0-mini.tgz  # Download the nuScenes mini split.\n",
         "\n",
-        "# !tar -xf v1.0-mini.tgz -C /data/sets/nuscenes  # Uncompress the nuScenes mini split.\n",
+        "!tar -xf v1.0-mini.tgz -C /data/sets/nuscenes  # Uncompress the nuScenes mini split.\n",
         "\n",
-        "# !pip install nuscenes-devkit &> /dev/null  # Install nuScenes."
+        "!pip install nuscenes-devkit &> /dev/null  # Install nuScenes."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls -lh /data/sets/nuscenes"
+      ],
+      "metadata": {
+        "id": "uC0WsXxAQra6",
+        "outputId": "197adf75-ae76-4fe8-e301-4441e738d434",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "total 16K\n",
+            "drwxr-xr-x  2 1035 1035 4.0K Mar 22  2019 maps\n",
+            "drwxrwxr-x 14 1035 1035 4.0K Mar 17  2019 samples\n",
+            "drwxrwxr-x 14 1035 1035 4.0K Mar 17  2019 sweeps\n",
+            "drwxr-xr-x  2 1035 1035 4.0K Mar 22  2019 v1.0-mini\n"
+          ]
+        }
       ]
     },
     {
